# src/modules/admin/routes/exam.route.js
@@ -5,10 +5,12 @@ const { isAdmin } = require('../middleware/admin.auth.middleware');
 const router = express.Router();
 
 // POST /admin/
-router.post('/exams', isAdmin, examController.createExam);
+router.post('/course', isAdmin, examController.createCourse);
 router.post('/tests', isAdmin, examController.createTest);
 
 //Get /admin/
-router.get('/exams', isAdmin, examController.getAllExamName);
+router.get('/courses', isAdmin, examController.getAllCourses);
+router.get('/exams', isAdmin, examController.getAllExams);
+router.get('/course/:courseName/tests', isAdmin, examController.getTestsByCourseName);
 
 module.exports = router; 
